// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Main Component should match snapshot 1`] = `
<WithStyles(UiLayout)>
  <h2>
    Constructed Response Question
  </h2>
  <EditableHtml
    autoWidthToolbar={true}
    charactersLimit={50000}
    className="response-area-editor"
    highlightShape={true}
    languageCharactersProps={Array []}
    markup="hi"
    maxHeight="40vh"
    minWidth="100px"
    onChange={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": true,
        },
        "math": Object {
          "controlledKeypadMode": false,
          "customKeys": undefined,
          "disabled": true,
          "keypadMode": undefined,
        },
        "separateParagraphs": Object {
          "disabled": false,
        },
        "table": Object {
          "disabled": true,
        },
        "textAlign": Object {
          "disabled": true,
        },
        "video": Object {
          "disabled": true,
        },
      }
    }
    toolbarOpts={
      Object {
        "position": "bottom",
      }
    }
  />
</WithStyles(UiLayout)>
`;

exports[`Render Main Component should match snapshot with teacher instructions 1`] = `
<WithStyles(UiLayout)>
  <h2>
    Constructed Response Question
  </h2>
  <div>
    <WithStyles(Collapsible)
      labels={
        Object {
          "hidden": "Show Teacher Instructions",
          "visible": "Hide Teacher Instructions",
        }
      }
    >
      <WithStyles(PreviewPrompt)
        defaultClassName="teacher-instructions"
        prompt="Teacher Instructions"
      />
    </WithStyles(Collapsible)>
  </div>
  <EditableHtml
    autoWidthToolbar={true}
    charactersLimit={50000}
    className="response-area-editor"
    highlightShape={true}
    languageCharactersProps={Array []}
    markup="hi"
    maxHeight="40vh"
    minWidth="100px"
    onChange={[Function]}
    pluginProps={
      Object {
        "audio": Object {
          "disabled": true,
        },
        "math": Object {
          "controlledKeypadMode": false,
          "customKeys": undefined,
          "disabled": true,
          "keypadMode": undefined,
        },
        "separateParagraphs": Object {
          "disabled": false,
        },
        "table": Object {
          "disabled": true,
        },
        "textAlign": Object {
          "disabled": true,
        },
        "video": Object {
          "disabled": true,
        },
      }
    }
    toolbarOpts={
      Object {
        "position": "bottom",
      }
    }
  />
</WithStyles(UiLayout)>
`;
